--- a/client/styles/gameEffects.scss
+++ b/client/styles/gameEffects.scss
@@ -504,9 +504,9 @@ $partSize: 5em;
 .smallCard:active,#claimAction:active{@include click(.9);}
 .hexagon:active{@include click(.9);}
 .hexEaters.blighted.boon-blight{opacity:1;}
-.current{
+.current,.roll{
     filter: saturate(4);
 }
-.current_selected,.marchjet_selected{
+.current_selected,.marchjet_selected,.roll_selected{
     filter:saturate(8);
 }
