--- a/client/styles/gameEffects.scss
+++ b/client/styles/gameEffects.scss
@@ -510,3 +510,4 @@ $partSize: 5em;
 .current_selected,.marchjet_selected,.roll_selected{
     filter:saturate(8);
 }
+.SneakyStaber_whileSneaking { margin-left: -105%!important; }//NOT ACTIVE NEEDS A IF STATEMENT THAT CHECK IF ITS ON HX WITH CHAMP OF SORTS
