--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -2759,3 +2759,22 @@ div.unitModel:nth-child(3) > .bb_HUD > .bspeed.onBoard {
 .rTB_End.blighted {
   opacity: 1 !important;
 }
+
+.warbandToken {
+  border-radius: 50%;
+  width: 90%;
+  height: 90%;
+  color: white;
+  font-family: "Shojumaru", cursive;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.warbandToken.white {
+  background: radial-gradient(circle, rgba(39, 5, 66, 0.851961) 0%, #12043c 26%, #302534 29%, rgba(57, 37, 3, 0.767927) 29%, rgba(171, 175, 20, 0.896779) 54%, rgba(52, 56, 2, 0.87437) 56%, rgba(56, 2, 10, 0.753922) 66%, rgba(70, 3, 3, 0.871569) 100%);
+}
+
+.warbandToken.black {
+  background: radial-gradient(circle, rgba(39, 5, 66, 0.851961) 0%, #12043c 27%, rgba(57, 37, 3, 0.767927) 41%, rgba(171, 175, 20, 0.896779) 55%, rgba(46, 2, 56, 0.87437) 58%, rgba(56, 2, 10, 0.753922) 90%, rgba(70, 3, 3, 0.871569) 100%);
+}
