--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -1020,3 +1020,15 @@ div.unitModel:nth-child(3) > .bb_HUD > .bspeed.onBoard{top:0%;left:0%;background
         background: radial-gradient(circle, rgba(39,5,66,0.8519608527004552) 0%, rgba(18,4,60,1) 27%, rgba(57,37,3,0.767927239255077) 41%, rgba(171,175,20,0.8967787798713235) 55%, rgba(46,2,56,0.8743698162858894) 58%, rgba(56,2,10,0.7539216370141807) 90%, rgba(70,3,3,0.87156869583771) 100%);
     }
 }
+.chnt{
+    font-family: $coinFont2;
+    font-size: 200%;
+    @include instaFlex;background: radial-gradient(circle, rgba(69,176,255,0.8743698162858894) 6%, rgba(18,54,143,0.891176538974965) 50%, rgba(5,13,66,1) 74%, rgba(2,6,56,0.9415967070421919) 100%);
+    border-radius: 50%;
+    border-color: rgb(2,6,56)!important;
+    sub{
+        margin-top:-20%;
+        font-size: 50%;
+        font-family: $coinFont2;
+    }
+}
